Fixed spacing

--- a/css/index.scss
+++ b/css/index.scss
@@ -54,7 +54,7 @@ img {
                 flex-direction: column;
 
                 img {
-                    margin-bottom: -120px;
+                    margin-bottom: -125px;
                 }
             }
         
